perubahan dan penambahan css

--- a/Fosan1.html
+++ b/Fosan1.html
@@ -2,70 +2,83 @@
     <head>
         <meta charset="utf-8">
         <title>FOSAN 3 PERTEMUAN 1</title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
         <header>
             <h1>CURRICULUM VITAE</h1>
         </header>
-        <div class="left">
-            <div class="left-header">
-                <img src="a.png" alt="gambar tidak ditemukan">
-                <h3>Profile</h3>
-                <hr>
-                <ul>
-                    <li>Nama    : Abdul Aziz Sayyaf</li>
-                    <li>Lahir   : Karanganyar, 1 November 2020</li>
-                    <li>Kelamin : Laki-laki</li>
-                    <li>Alamat  : Jl.Gedung Batu Selatan No.90 RT 03 RW 06, Kelurahan Ngemplak Simongan, Kecamatan Semarang Barat </li>
-                </ul>
-            </div>
-            <div class="left-footer">
-                <h3>Contact</h3>
-                <hr>
-                <p>WhatsApp : <a href="#">08892453468</a></p>
-                <p>Telegram : <a href="#">Join me! at Telegram</a></p>
-                <p>Email    : <a href="#">ab0170826@gmail.com</a></p>
-                <div class="left-footer-logo">
-                    <img src="" alt="gambar tidak ditemukan">
-                    <img src="" alt="gambar tidak ditemukan">
+        <div class="body">            
+            <div class="left">
+                <div class="left-wrapper">
+                    <div class="left-header">
+                        <img src="a.png" alt="gambar tidak ditemukan">
+                        <h3>Profile</h3>
+                        <hr>
+                        <ul>
+                            <li>Nama    : Abdul Aziz Sayyaf</li>
+                            <li>Lahir   : Karanganyar, 1 November 2020</li>
+                            <li>Kelamin : Laki-laki</li>
+                            <li>Alamat  : Jl.Gedung Batu Selatan No.90 RT 03 RW 06, Kelurahan Ngemplak Simongan, Kecamatan Semarang Barat </li>
+                        </ul>
+                    </div>
+                    <div class="left-footer">
+                        <h3>Contact</h3>
+                        <hr>
+                        <p>WhatsApp : <a href="#">08892453468</a></p>
+                        <p>Telegram : <a href="#">Join me! at Telegram</a></p>
+                        <p>Email    : <a href="#">ab0170826@gmail.com</a></p>
+                        <div class="left-footer-logo">
+                            <img src="" alt="logo tidak ditemukan">
+                            <img src="" alt="logo tidak ditemukan">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="right">
-            <div class="lesson">
-                <div class="lesson-wrapper">
-                    <p>Pendidikan</p>
-                    <hr>
-                    <ul>
-                        <li>2009-2015 Sekolah Dasar Islam Terpadu Al Qolam</li>
-                        <li>2016-2018 SMPN 40 Semarang</li>
-                        <li>2019-2020 sedang bersekolah di SMK Negeri 8 Semarang</li>
-                    </ul>
-                </div>
-                <div class="lesson-wrapper">
-                    <p>Keahlian Dasar</p>
-                    <hr>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
-                </div>
-                <div class="lesson-wrapper">
-                    <p>Komunikasi</p>
-                    <hr>
-                    <ul>
-                        <li>Indonesia</li>
-                        <li>Inggris</li>
-                        <li>Jpg</li>
-                    </ul>
-                </div>
-                <div class="lesson-wrapper">
-                    <p>Pengalaman</p>
-                    <hr>
-                    <ul>
-                        <li>Saat ini belum ada</li>
-                    </ul>
+            <div class="right">
+                <div class="lesson">
+                    <div class="lesson-wrapper">
+                        <p>Pendidikan</p>
+                        <hr>
+                        <div class="lesson-list">
+                            <ul>
+                                <li>2009-2015 Sekolah Dasar Islam Terpadu Al Qolam</li>
+                                <li>2016-2018 SMPN 40 Semarang</li>
+                                <li>2019-2020 sedang bersekolah di SMK Negeri 8 Semarang</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="lesson-wrapper">
+                        <p>Keahlian Dasar</p>
+                        <hr>
+                        <div class="lesson-list">
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="lesson-wrapper">
+                        <p>Komunikasi</p>
+                        <hr>
+                        <div class="lesson-list">
+                            <ul>
+                                <li>Indonesia</li>
+                                <li>Inggris</li>
+                                <li>Jpg</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="lesson-wrapper">
+                        <p>Pengalaman</p>
+                        <hr>
+                        <div class="lesson-list">
+                            <ul>
+                                <li>Saat ini belum ada</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
