--- a/Fosan1.html
+++ b/Fosan1.html
@@ -12,7 +12,7 @@
             <div class="left">
                 <div class="left-wrapper">
                     <div class="left-header">
-                        <img src="a.png" alt="gambar tidak ditemukan">
+                        <img src="./gambar/logo profil.png" alt="gambar tidak ditemukan"class="left-header-logo">
                         <h3>Profile</h3>
                         <hr>
                         <ul>
@@ -29,8 +29,8 @@
                         <p>Telegram : <a href="#">Join me! at Telegram</a></p>
                         <p>Email    : <a href="#">ab0170826@gmail.com</a></p>
                         <div class="left-footer-logo">
-                            <img src="" alt="logo tidak ditemukan">
-                            <img src="" alt="logo tidak ditemukan">
+                            <img src="./gambar/logo wa.png" alt="logo tidak ditemukan" class="logo wa">
+                            <img src="./gambar/logo telegram.png" alt="logo tidak ditemukan" class="logo telegram">
                         </div>
                     </div>
                 </div>
