--- a/Fosan1.html
+++ b/Fosan1.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
+        <div class="tubuh">
         <header>
             <h1>CURRICULUM VITAE</h1>
         </header>
@@ -81,6 +82,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </body>
 </html>
